--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 #filename:.travis.yml
-dist: trusty
+dist: xenial
 sudo: false
 cache:
   bundler: true
@@ -15,34 +15,25 @@ env:
   - USER=cokebar
   - REPO=openwrt-vlmcsd
   matrix:
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/ar71xx/generic/OpenWrt-SDK-15.05.1-ar71xx-generic_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/ar71xx/nand/lede-sdk-17.01.4-ar71xx-nand_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/ramips/mt7620/OpenWrt-SDK-15.05.1-ramips-mt7620_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/ramips/mt7620/lede-sdk-17.01.4-ramips-mt7620_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/brcm63xx/generic/OpenWrt-SDK-15.05.1-brcm63xx-generic_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/brcm63xx/generic/lede-sdk-17.01.4-brcm63xx-generic_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/bcm53xx/generic/OpenWrt-SDK-15.05.1-bcm53xx_gcc-4.8-linaro_uClibc-0.9.33.2_eabi.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/bcm53xx/generic/lede-sdk-17.01.4-bcm53xx_gcc-5.4.0_musl-1.1.16_eabi.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/brcm47xx/generic/OpenWrt-SDK-15.05.1-brcm47xx-generic_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/brcm47xx/generic/lede-sdk-17.01.4-brcm47xx-generic_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/mvebu/generic/OpenWrt-SDK-15.05.1-mvebu_gcc-4.8-linaro_uClibc-0.9.33.2_eabi.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/mvebu/generic/lede-sdk-17.01.4-mvebu_gcc-5.4.0_musl-1.1.16_eabi.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/x86/generic/OpenWrt-SDK-15.05.1-x86-generic_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/x86/generic/lede-sdk-17.01.4-x86-generic_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/x86/64/OpenWrt-SDK-15.05.1-x86-64_gcc-4.8-linaro_uClibc-0.9.33.2.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.lede-project.org/releases/17.01.4/targets/x86/64/lede-sdk-17.01.4-x86-64_gcc-5.4.0_musl-1.1.16.Linux-x86_64.tar.xz
-  - OSVER=OpenWrt   SDK_URL=https://archive.openwrt.org/chaos_calmer/15.05.1/kirkwood/generic/OpenWrt-SDK-15.05.1-kirkwood_gcc-4.8-linaro_uClibc-0.9.33.2_eabi.Linux-x86_64.tar.bz2
-  - OSVER=LEDE      SDK_URL=https://downloads.openwrt.org/releases/17.01.4/targets/kirkwood/generic/lede-sdk-17.01.4-kirkwood_gcc-5.4.0_musl-1.1.16_eabi.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/ar71xx/nand/openwrt-sdk-18.06.1-ar71xx-nand_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/ramips/mt7620/openwrt-sdk-18.06.1-ramips-mt7620_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/brcm63xx/generic/openwrt-sdk-18.06.1-brcm63xx-generic_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/bcm53xx/generic/openwrt-sdk-18.06.1-bcm53xx_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/brcm47xx/generic/openwrt-sdk-18.06.1-brcm47xx-generic_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/mvebu/generic/openwrt-sdk-18.06.1-mvebu_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/x86/generic/openwrt-sdk-18.06.1-x86-generic_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/x86/64/openwrt-sdk-18.06.1-x86-64_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.1/targets/kirkwood/generic/openwrt-sdk-18.06.1-kirkwood_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
 install:
 - mkdir -p $TRAVIS_BUILD_DIR/local ; cd $TRAVIS_BUILD_DIR/local
-- wget "http://archive.ubuntu.com/ubuntu/pool/main/c/ccache/ccache_3.3.4-1_amd64.deb"
+- wget "http://archive.ubuntu.com/ubuntu/pool/main/c/ccache/ccache_3.5-1_amd64.deb"
 - dpkg -x *.deb .
 - mkdir -p $TRAVIS_BUILD_DIR/cache ; cd $TRAVIS_BUILD_DIR/cache
 - wget -c $SDK_URL
 - mkdir -p $TRAVIS_BUILD_DIR/sdk ; cd $TRAVIS_BUILD_DIR/sdk
 - export FILE=$TRAVIS_BUILD_DIR/cache/$(basename $SDK_URL)
 - file $FILE
-- if [ "$OSVER" = "OpenWrt" ]; then tar xjf $FILE && SDK_DIR="OpenWrt-SDK-*"; elif [ "$OSVER" = "LEDE" ]; then tar Jxf $FILE && SDK_DIR="lede-sdk-*"; fi
+- tar Jxf $FILE && SDK_DIR="openwrt-sdk-*"
 - cd $TRAVIS_BUILD_DIR/sdk/$SDK_DIR
 - mkdir package/$PACKAGE
 - ln -s $TRAVIS_BUILD_DIR/Makefile package/$PACKAGE/
