--- a/.travis.yml
+++ b/.travis.yml
@@ -29,6 +29,7 @@ env:
   - SDK_URL=https://downloads.openwrt.org/releases/18.06.8/targets/brcm2708/bcm2708/openwrt-sdk-18.06.8-brcm2708-bcm2708_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
   - SDK_URL=https://downloads.openwrt.org/releases/18.06.8/targets/brcm2708/bcm2709/openwrt-sdk-18.06.8-brcm2708-bcm2709_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
   - SDK_URL=https://downloads.openwrt.org/releases/18.06.8/targets/mpc85xx/generic/openwrt-sdk-18.06.8-mpc85xx-generic_gcc-7.3.0_musl.Linux-x86_64.tar.xz
+  - SDK_URL=https://downloads.openwrt.org/releases/18.06.8/targets/ipq806x/generic/openwrt-sdk-18.06.8-ipq806x_gcc-7.3.0_musl_eabi.Linux-x86_64.tar.xz
 install:
 - mkdir -p $TRAVIS_BUILD_DIR/local ; cd $TRAVIS_BUILD_DIR/local
 - wget "http://archive.ubuntu.com/ubuntu/pool/main/c/ccache/ccache_3.7.7-1_amd64.deb"
